Refactor EmailService to use SendGrid for emails
Refactored EmailService to use SendGrid for sending emails instead of JavaMailSender. Updated email formatting for password reset and event notifications.